--- a/frontend-angular/src/app/dashboard/dashboard.html
+++ b/frontend-angular/src/app/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 <header class="navbar">
   <div class="logo">Smart Home</div>
   <nav>
-    <button class="btn btn-add" (click)="goTo('pieces')">
+    <button class="btn btn-add" (click)="goTo('/pieces')">
       <i class="fa fa-plus"></i> Ajouter Pièce
     </button>
     <button class="btn btn-logout" (click)="logout()">
@@ -11,6 +11,20 @@
 </header>
 
 <main class="dashboard-content">
-  <h1>Bienvenue sur le Dashboard</h1>
-  <p>Gérez vos pièces, vos appareils et votre maison connectée.</p>
+  <h1>Mes Pièces</h1>
+
+  <div class="pieces-list">
+    <div *ngFor="let piece of pieces" class="piece-card">
+      <h2><i class="fa fa-home"></i> {{ piece.name }}</h2>
+
+      <ul>
+        <li *ngFor="let eq of piece.equipements || []" 
+              [ngClass]="{'on': eq.etat==='ON','off': eq.etat==='OFF'}">
+            <i class="fa fa-lightbulb"></i>
+            <strong>{{ eq.nom }}</strong> - {{ eq.description }} - <em>{{ eq.etat }}</em>
+          </li>
+
+      </ul>
+    </div>
+  </div>
 </main>
