--- a/frontend-angular/src/app/pieces/pieces.html
+++ b/frontend-angular/src/app/pieces/pieces.html
@@ -1,3 +1,11 @@
+<nav class="navbar">
+  <div class="logo">Gestion Pièces</div>
+  <ul>
+  <li><a (click)="goTo('dashboard')">Dashboard</a></li>
+    <li><a (click)="goTo('pieces')">Pièces</a></li>
+    <li class="logout"><a (click)="logout()">Déconnexion</a></li>
+  </ul>
+</nav>
 <div class="add-piece-container">
   <h2><i class="fa fa-cube"></i> Ajouter une Pièce</h2>
 
